--- a/Vite/vite-project/package.json
+++ b/Vite/vite-project/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^2.6.1",
     "firebase": "^11.6.0",
     "react": "^19.0.0",
+    "react-d3-tree": "^3.6.6",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "vis-network": "^9.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
